엔티티 단순화 및 중복 코드 정리